# Conways-Game-of-Life-Rust

./: Cargo.toml
src/: board.rs  cell.rs  game.rs  main.rs  point.rs  screen.rs  table.rs
