[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"
authors = ["Rza Ismayilov <rzaismail82@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
ansi_term = "0.12.1"
sdl2 = "0.35"
# array2d = "0.2.1"